Fill up dashboard with database data
